Risk - Yura Mamyrin (yura@yura.net)

CURRENT VERSION:

	Risk Game:	1.1.1.1
	 * Save:	8
	 * Network:	10

	Android		15
	Flash GUI:	2
	Swing GUI:	2
	Simple GUI:	1.1.1.1
	Increment1GUI:	1.1.1.1
	CommandLine:	1.0.4.1

1.1.1.1

	in p2p online play, when someone disconnects, the others can carry on playing

	Android 15 fixed: help screen crash on display string with & symbol
		   fixed: MapView combo error when no item selected by swiping bellow items
	Android 14 lobby integration started
		   2nd nullpointer in loadgame fixed
		   do not print stack on getDrawable(Context,String) failing
		   fixed: in ICS the menu button still comes up, (eg THC One X)
		   fixed: ldpi/small green go button looks wrong

1.1.1.0

	when you must trade, the "End Trade" button becomes disabled/hidden
	can have different circle sizes on maps
	the map Editor can save jpeg files as well as png for the img pic

	Android 13 xhdpi graphics update
		   fixed - some maps not loading (e.g Italia_s)
	Android 12 Grasshopper update
		   xhdpi update for 9.png for main meu button and appstore
		   null pointer in drawArnies fix
	Android 11 donate button added to main menu
		   circles on map can be different size for different maps
		   capitals look a bit better
	Android 10 stats graph added
	Android 9 some maps fail to load on Android
		  when a map needs to be updated then it shows the download icon instead of the play icon
		  if a map does not download fully it does not come up in the list of maps
	Android 8 fixed - WARNING: trying to set a transparent color: 0 (going from mainmenu to newgame)
		  DONE - when map is loading, should show a loading screen
		  DONE - attack and move screen need to take into account dpi when drawing the countries
		  country names added to move and attack screen
		  fixed - Text in cards dialog is not very good and does not mention "trade 3 same or 3 different cards"
		  in fixed cards rules the cards dialog shows you have many armies you will get for a particular trade